--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <!-- Libs CSS -->
+    <!-- Libs CSS test -->
     <link
       rel="stylesheet"
       href="assets/libs/%40fancyapps/fancybox/dist/jquery.fancybox.min.css"
