--- a/index.html
+++ b/index.html
@@ -247,11 +247,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-10 text-center">
-                        <h1 class="display-2 mb-4">Imagine what we will accomplish together</h1>
-                        <p class="lead mb-5 px-lg-5">Powerful analytics tools for your business. See the exact keywords
-                            for which
-                            your competitors rank in organic search and the amount of traffic driven by each of them.
-                        </p>
+                        <h2 class="display-4 mb-6">Imagine what we will accomplish together</h2>
+                        <h1 class="display-1 mb-6">Free and Open Source CMMS</h1>
+                        
                         <!-- Button Modal -->
                         <button type="button" class="btn btn-secondary" data-toggle="modal"
                             data-target="#pricing-modal">
